<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/scanCodeView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/picture"
        android:layout_centerInParent="true"
        android:layout_marginTop="-108dp"
        android:layout_marginBottom="595dp"
        android:text="@string/barCodeView"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/capture"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:maxWidth="88dip"
            android:maxHeight="48dip"
            android:text="@string/Photo" />

        <Button
            android:id="@+id/scanButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:maxWidth="88dip"
            android:maxHeight="48dip"
            android:text="@string/barcode" />

        <Button
            android:id="@+id/save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:maxWidth="88dip"
            android:maxHeight="48dip"
            android:text="@string/save" />

    </LinearLayout>

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="195dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textOutput"
        android:layout_width="match_parent"
        android:layout_height="566dp"
        android:layout_alignBottom="@+id/picture"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-166dp"
        android:text="@string/textOutput" />

</RelativeLayout>